// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should fetch shared channels data when channel is shared 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
      <i
        class="icon icon-circle-multiple-outline"
        data-testid="SharedChannelIcon"
      />
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <div
        data-testid="sidebar-channel-menu"
      />
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <div
        data-testid="sidebar-channel-menu"
      />
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should match snapshot with aria label prefix and unread mentions 1`] = `
<div>
  <a
    aria-label="channel_label aria_label_prefix_ 2 mentions"
    class="SidebarLink unread-title"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <span
      class="badge"
      id="unreadMentions"
    >
      <span
        class="unreadMentions"
      >
        2
      </span>
    </span>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <div
        data-testid="sidebar-channel-menu"
      />
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should not fetch shared channels data when data already exists 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
      <i
        class="icon icon-circle-multiple-outline"
        data-testid="SharedChannelIcon"
      />
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <div
        data-testid="sidebar-channel-menu"
      />
    </div>
  </a>
</div>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_link should not fetch shared channels for non-shared channels 1`] = `
<div>
  <a
    aria-label="channel_label"
    class="SidebarLink"
    href="/team/channels/town-square"
    id="sidebarItem_"
    tabindex="0"
  >
    <div
      class="SidebarChannelLinkLabel_wrapper"
    >
      <span
        class="SidebarChannelLinkLabel"
      >
        channel_label
      </span>
    </div>
    <div
      class="SidebarMenu MenuWrapper"
    >
      <div
        data-testid="sidebar-channel-menu"
      />
    </div>
  </a>
</div>
`;
